--- a/app/src/Components/ChatGptNotes/ChatGptNotes.css
+++ b/app/src/Components/ChatGptNotes/ChatGptNotes.css
@@ -4,15 +4,32 @@
     left: 20px;
     background: var(--gradient-background-2);
     border-radius: 10px;
-    padding: 25px;
+    padding: 15px;
     width: 310px;
     height: 320px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     z-index: 100;
-    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.ChatGptNotesDiv{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 10px;
+    padding:0 15px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+}
 
+.ChatGptNotesDiv li{
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+}
 .ChatGptNotesHeader{
     width: 100%;
     height: 20%;
