--- a/app/src/pages/VideoComponent/VideoComponent.css
+++ b/app/src/pages/VideoComponent/VideoComponent.css
@@ -115,3 +115,11 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
+
+.VideoComponentControlsMicVidChat{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    left: 10px;
+}
