--- a/app/src/Components/CreateRoom/CreateRoom.css
+++ b/app/src/Components/CreateRoom/CreateRoom.css
@@ -76,7 +76,8 @@
   height: 50px;
   display: flex;
   align-items: center;
-  gap: 10px;
+  justify-content: center;
+  gap: 20px;
 }
 
 .checkboxIsTeacherDiv input{
